3.7/cloudhub/configure-twitter-for-api-access.adoc
= Configure Twitter for API Access
:keywords: cloudhub, cloud, api, twitter

This document describes how to enable your Twitter account for API access. This is required for using the Twitter Connector.

To enable API access, you need to create a "Twitter Application" on the Twitter Developer website. Obtain API credentials which are needed to configure the Twitter cloud connectors.

== Create a New Twitter Application

. If you don't already have a Twitter account, create one at http://twitter.com/signup. You may wish to create a demo account for testing. You need the credentials described in the next step.
+
*Note*: You must supply a mobile phone number to create a Twitter account. If you have another Twitter account that has a mobile phone number, use that account with Mule. Twitter does not let you share a mobile phone number between accounts. For more information about how to register your number, see this https://support.twitter.com/articles/110250-adding-your-mobile-number-to-your-account-via-web[Twitter support article].
+
If you have not set a mobile phone number, click the egg icon (becomes your avatar picture after you create or upload a photo in your profile) > *Settings* > *Mobile*:
+
image:/docs/download/attachments/122752435/TwitterSettings.png?version=1&modificationDate=1433291361055[image]
+
. Go to: https://dev.twitter.com/apps/new to create a new _Twitter Application_. You may need to sign in using the Twitter account credentials you just created.
+
. Complete the Application Details form with the following information:
.. *Name* – Must be unique to the Twitter system (you are not allowed to use the word "Twitter").
.. *Description* – A brief overview of the application you are building.
.. *Website* – Until you are ready to make your app public, use a placeholder, such as http://www.example.com. A viable URL is required. When you're ready to make your app public, change this value to the site where users download your app and where you provide information on its use.
.. *Callback URL* – Leave this field blank, because we're not configuring authentication right now.
. Agree to the terms, and click *Create your Twitter application*.

If your application was successfully created, you are redirected to an application management page that shows various details about your application. Note that under the *Application Settings* heading, the first item is an *Access Level* setting that may be set to read-only. You may wish to change this in the following steps.

== Change Access Level (If Necessary)

If you are building a project that writes to Twitter, to post Tweets as an example, you need to enable write-access for this Twitter application. To proceed with the following steps, you need to have registered your mobile phone number with Twitter. For more information about how to register your number, see this https://support.twitter.com/articles/110250-adding-your-mobile-number-to-your-account-via-web[Twitter support article].

. In the apps.twitter.com page for your app, Applications Management page for your app, click the *Permissions* tab:
+
image:/docs/download/attachments/122752435/TwitterAccessLevel.png?version=1&modificationDate=1433452606691[image]
+
. Click the access level you want.
+
. Click *Update Settings*.

== Obtain API Credentials

The final step is to generate an access token. If you have not yet created an access token, you see an option to create as detailed below. If you have already created the access token, you can also generate a new one by following these steps. The access token is generated based on the access level specified (in the above steps), so if you change your access level, you need to create a new access token.

. Click  the *Keys and Access Tokens* tab. Under the *Your Access Token* section, click the *Create my access token* button. 
. The page refreshes, your new access token generates, and it's ready to use.

You have completed the steps for creating a Twitter application. You now need to copy the Consumer key, Consumer secret, Access token, and Access token secret into Anypoint Studio to configure the Twitter connector.

[TIP]
As you copy fields from the Twitter application menu to the Anypoint Studio connector configuration, be sure that you do not copy in additional leading/trailing characters or spaces. It is a good idea to visually confirm that your copy and paste functions did not capture surrounding characters.
